--- a/data_import_cleanup.html
+++ b/data_import_cleanup.html
@@ -156,7 +156,7 @@ $(document).ready(function () {
 </div>
 <div id="setting-up-data" class="section level3">
 <h3>Setting up data</h3>
-<p>To help cleaning lat-long null data and storing in dec_deg format, we use a clean-up function</p>
+<p>To remove lat-long null data and storing it in dec_deg format, we create the function below</p>
 <pre class="r"><code>cleanup=function(dataframe){
 dataframe$LAT_016&lt;-ifelse(dataframe$LAT_016&lt;=0,NA,dataframe$LAT_016) # NA to zero-neg values
 dataframe$LONG_017&lt;-ifelse(dataframe$LONG_017&lt;=0,NA,dataframe$LONG_017) # NA to zero-neg values
@@ -181,7 +181,7 @@ if(max(dataframe$LAT_016)&gt;1e+6){
 }
   return(dataframe)
 }</code></pre>
-<p>We can now apply this clean-up function to all available data (co1992 to co2017), and save it as a Rdata file.</p>
+<p>We can now apply this clean-up function to all available data (co1992 to co2017), and save it as an Rdata file.</p>
 <pre class="r"><code>require(measurements) #eval = FALSE to save time knitting
 for(i in 1:26){ # 26 years
   year=(1991+i) # From 1992
@@ -191,6 +191,78 @@ for(i in 1:26){ # 26 years
 save(file=&quot;Colorado NBI.RData&quot;,list=grep(&quot;co&quot;,ls(),value = TRUE))
 # next session / debugging RData can be re-loaded using
 # load(&quot;Colorado NBI.RData&quot;)</code></pre>
+<p>A population of 8000 to 9000 bridges is inspected every 2 years. Up to 137 attributes are provided, including the sufficiency index, considered the most important variable.</p>
+<pre class="r"><code>load(&quot;Colorado NBI.RData&quot;)
+dim(co1992)</code></pre>
+<pre><code>## [1] 8361  134</code></pre>
+<pre class="r"><code>colnames(co1992)</code></pre>
+<pre><code>##   [1] &quot;STATE_CODE_001&quot;          &quot;STRUCTURE_NUMBER_008&quot;   
+##   [3] &quot;RECORD_TYPE_005A&quot;        &quot;ROUTE_PREFIX_005B&quot;      
+##   [5] &quot;SERVICE_LEVEL_005C&quot;      &quot;ROUTE_NUMBER_005D&quot;      
+##   [7] &quot;DIRECTION_005E&quot;          &quot;HIGHWAY_DISTRICT_002&quot;   
+##   [9] &quot;COUNTY_CODE_003&quot;         &quot;PLACE_CODE_004&quot;         
+##  [11] &quot;FEATURES_DESC_006A&quot;      &quot;CRITICAL_FACILITY_006B&quot; 
+##  [13] &quot;FACILITY_CARRIED_007&quot;    &quot;LOCATION_009&quot;           
+##  [15] &quot;MIN_VERT_CLR_010&quot;        &quot;KILOPOINT_011&quot;          
+##  [17] &quot;BASE_HWY_NETWORK_012&quot;    &quot;LRS_INV_ROUTE_013A&quot;     
+##  [19] &quot;SUBROUTE_NO_013B&quot;        &quot;LAT_016&quot;                
+##  [21] &quot;LONG_017&quot;                &quot;DETOUR_KILOS_019&quot;       
+##  [23] &quot;TOLL_020&quot;                &quot;MAINTENANCE_021&quot;        
+##  [25] &quot;OWNER_022&quot;               &quot;FUNCTIONAL_CLASS_026&quot;   
+##  [27] &quot;YEAR_BUILT_027&quot;          &quot;TRAFFIC_LANES_ON_028A&quot;  
+##  [29] &quot;TRAFFIC_LANES_UND_028B&quot;  &quot;ADT_029&quot;                
+##  [31] &quot;YEAR_ADT_030&quot;            &quot;DESIGN_LOAD_031&quot;        
+##  [33] &quot;APPR_WIDTH_MT_032&quot;       &quot;MEDIAN_CODE_033&quot;        
+##  [35] &quot;DEGREES_SKEW_034&quot;        &quot;STRUCTURE_FLARED_035&quot;   
+##  [37] &quot;RAILINGS_036A&quot;           &quot;TRANSITIONS_036B&quot;       
+##  [39] &quot;APPR_RAIL_036C&quot;          &quot;APPR_RAIL_END_036D&quot;     
+##  [41] &quot;HISTORY_037&quot;             &quot;NAVIGATION_038&quot;         
+##  [43] &quot;NAV_VERT_CLR_MT_039&quot;     &quot;NAV_HORR_CLR_MT_040&quot;    
+##  [45] &quot;OPEN_CLOSED_POSTED_041&quot;  &quot;SERVICE_ON_042A&quot;        
+##  [47] &quot;SERVICE_UND_042B&quot;        &quot;STRUCTURE_KIND_043A&quot;    
+##  [49] &quot;STRUCTURE_TYPE_043B&quot;     &quot;APPR_KIND_044A&quot;         
+##  [51] &quot;APPR_TYPE_044B&quot;          &quot;MAIN_UNIT_SPANS_045&quot;    
+##  [53] &quot;APPR_SPANS_046&quot;          &quot;HORR_CLR_MT_047&quot;        
+##  [55] &quot;MAX_SPAN_LEN_MT_048&quot;     &quot;STRUCTURE_LEN_MT_049&quot;   
+##  [57] &quot;LEFT_CURB_MT_050A&quot;       &quot;RIGHT_CURB_MT_050B&quot;     
+##  [59] &quot;ROADWAY_WIDTH_MT_051&quot;    &quot;DECK_WIDTH_MT_052&quot;      
+##  [61] &quot;VERT_CLR_OVER_MT_053&quot;    &quot;VERT_CLR_UND_REF_054A&quot;  
+##  [63] &quot;VERT_CLR_UND_054B&quot;       &quot;LAT_UND_REF_055A&quot;       
+##  [65] &quot;LAT_UND_MT_055B&quot;         &quot;LEFT_LAT_UND_MT_056&quot;    
+##  [67] &quot;DECK_COND_058&quot;           &quot;SUPERSTRUCTURE_COND_059&quot;
+##  [69] &quot;SUBSTRUCTURE_COND_060&quot;   &quot;CHANNEL_COND_061&quot;       
+##  [71] &quot;CULVERT_COND_062&quot;        &quot;OPR_RATING_METH_063&quot;    
+##  [73] &quot;OPERATING_RATING_064&quot;    &quot;INV_RATING_METH_065&quot;    
+##  [75] &quot;INVENTORY_RATING_066&quot;    &quot;STRUCTURAL_EVAL_067&quot;    
+##  [77] &quot;DECK_GEOMETRY_EVAL_068&quot;  &quot;UNDCLRENCE_EVAL_069&quot;    
+##  [79] &quot;POSTING_EVAL_070&quot;        &quot;WATERWAY_EVAL_071&quot;      
+##  [81] &quot;APPR_ROAD_EVAL_072&quot;      &quot;WORK_PROPOSED_075A&quot;     
+##  [83] &quot;WORK_DONE_BY_075B&quot;       &quot;IMP_LEN_MT_076&quot;         
+##  [85] &quot;DATE_OF_INSPECT_090&quot;     &quot;INSPECT_FREQ_MONTHS_091&quot;
+##  [87] &quot;FRACTURE_092A&quot;           &quot;UNDWATER_LOOK_SEE_092B&quot; 
+##  [89] &quot;SPEC_INSPECT_092C&quot;       &quot;FRACTURE_LAST_DATE_093A&quot;
+##  [91] &quot;UNDWATER_LAST_DATE_093B&quot; &quot;SPEC_LAST_DATE_093C&quot;    
+##  [93] &quot;BRIDGE_IMP_COST_094&quot;     &quot;ROADWAY_IMP_COST_095&quot;   
+##  [95] &quot;TOTAL_IMP_COST_096&quot;      &quot;YEAR_OF_IMP_097&quot;        
+##  [97] &quot;OTHER_STATE_CODE_098A&quot;   &quot;OTHER_STATE_PCNT_098B&quot;  
+##  [99] &quot;OTHR_STATE_STRUC_NO_099&quot; &quot;STRAHNET_HIGHWAY_100&quot;   
+## [101] &quot;PARALLEL_STRUCTURE_101&quot;  &quot;TRAFFIC_DIRECTION_102&quot;  
+## [103] &quot;TEMP_STRUCTURE_103&quot;      &quot;HIGHWAY_SYSTEM_104&quot;     
+## [105] &quot;FEDERAL_LANDS_105&quot;       &quot;YEAR_RECONSTRUCTED_106&quot; 
+## [107] &quot;DECK_STRUCTURE_TYPE_107&quot; &quot;SURFACE_TYPE_108A&quot;      
+## [109] &quot;MEMBRANE_TYPE_108B&quot;      &quot;DECK_PROTECTION_108C&quot;   
+## [111] &quot;PERCENT_ADT_TRUCK_109&quot;   &quot;NATIONAL_NETWORK_110&quot;   
+## [113] &quot;PIER_PROTECTION_111&quot;     &quot;BRIDGE_LEN_IND_112&quot;     
+## [115] &quot;SCOUR_CRITICAL_113&quot;      &quot;FUTURE_ADT_114&quot;         
+## [117] &quot;YEAR_OF_FUTURE_ADT_115&quot;  &quot;MIN_NAV_CLR_MT_116&quot;     
+## [119] &quot;FED_AGENCY&quot;              &quot;DATE_LAST_UPDATE&quot;       
+## [121] &quot;TYPE_LAST_UPDATE&quot;        &quot;DEDUCT_CODE&quot;            
+## [123] &quot;REMARKS&quot;                 &quot;PROGRAM_CODE&quot;           
+## [125] &quot;PROJ_NO&quot;                 &quot;PROJ_SUFFIX&quot;            
+## [127] &quot;NBI_TYPE_OF_IMP&quot;         &quot;DTL_TYPE_OF_IMP&quot;        
+## [129] &quot;SPECIAL_CODE&quot;            &quot;STEP_CODE&quot;              
+## [131] &quot;STATUS_WITH_10YR_RULE&quot;   &quot;SUFFICIENCY_ASTERC&quot;     
+## [133] &quot;SUFFICIENCY_RATING&quot;      &quot;STATUS_NO_10YR_RULE&quot;</code></pre>
 </div>
 <div id="plotting-data" class="section level3">
 <h3>Plotting data</h3>
